Refactor: Update GitHub Actions for `developement` branch and PRs
- Rename `develop` to `developement` across build, security, and test workflows to align with the new branch naming convention.
- Add `pull_request` triggers to release-drafter and security workflows. This ensures release drafting is considered for PRs to `main` and security scans run on PRs targeting `main` and `developement`, enabling earlier detection of vulnerabilities.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches:
       - main
-      - develop
+      - developement
   pull_request:
     branches:
       - main
-      - develop
+      - developement
   workflow_dispatch:
 
 jobs:
